--- a/CC-Electron/package.json
+++ b/CC-Electron/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "start": "electron ."
   },
@@ -13,6 +14,7 @@
     "electron": "^32.0.1"
   },
   "dependencies": {
+    "electron-store": "^10.0.0",
     "ws": "^8.18.0"
   }
 }
