--- a/CC-Electron/package.json
+++ b/CC-Electron/package.json
@@ -2,7 +2,7 @@
   "name": "cc-electron",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "src/main/main.js",
   "type": "module",
   "scripts": {
     "start": "electron ."
