--- a/CC-Electron/package.json
+++ b/CC-Electron/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "electron-store": "^10.0.0",
     "fluent-ffmpeg": "^2.1.3",
+    "systeminformation": "^5.23.5",
     "ws": "^8.18.0"
   }
 }
