--- a/CC-Electron/package.json
+++ b/CC-Electron/package.json
@@ -14,6 +14,7 @@
     "electron": "^32.0.1"
   },
   "dependencies": {
+    "chokidar": "^4.0.3",
     "electron-store": "^10.0.0",
     "fluent-ffmpeg": "^2.1.3",
     "node-record-lpcm16": "^1.0.1",
