--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "cc-electron",
+  "name": "capcha",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/main/main.js",
+  "description": "An Electron-based screen recording application using OBS Studio.",
   "type": "module",
+  "main": "src/main/main.js",
   "scripts": {
     "start": "electron ."
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IzzaTommy/CapCha.git"
+  },
+  "author": "Thomas Joel",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/IzzaTommy/CapCha/issues"
+  },
+  "homepage": "https://github.com/IzzaTommy/CapCha#readme",
   "devDependencies": {
-    "electron": "^32.0.1"
+    "electron": "^35.0.1"
   },
   "dependencies": {
     "chokidar": "^4.0.3",
-    "electron-store": "^10.0.0",
+    "electron-store": "^10.0.1",
+    "extract-file-icon": "^0.3.2",
     "fluent-ffmpeg": "^2.1.3",
-    "node-record-lpcm16": "^1.0.1",
     "ps-list": "^8.1.1",
-    "systeminformation": "^5.23.5",
-    "ws": "^8.18.0"
+    "ws": "^8.18.1"
   }
 }
