--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "src/main/main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "dist": "electron-builder"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,8 @@
   },
   "homepage": "https://github.com/IzzaTommy/capcha#readme",
   "devDependencies": {
-    "electron": "^35.0.1"
+    "electron": "^35.0.1",
+    "electron-builder": "^25.1.8"
   },
   "dependencies": {
     "chokidar": "^4.0.3",
@@ -29,5 +31,29 @@
     "fluent-ffmpeg": "^2.1.3",
     "ps-list": "^8.1.1",
     "ws": "^8.18.1"
+  },
+  "build": {
+    "appId": "com.electron.capcha",
+    "productName": "CapCha",
+    "directories": {
+      "buildResources": "build",
+      "output": "dist"
+    },
+    "extraResources": [
+      {
+        "from": "obs-studio/build_x64/rundir/Release",
+        "to": "obs-studio"
+      }
+    ],
+    "files": [
+      "!**/obs-studio/*"
+    ],
+    "win": {
+      "target": "nsis"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    }
   }
 }
