--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "chokidar": "^4.0.3",
     "electron-store": "^10.0.1",
     "extract-file-icon": "^0.3.2",
-    "ffmpeg-static": "^5.2.0",
-    "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "ps-list": "^8.1.1",
     "ws": "^8.18.1"
@@ -43,6 +41,14 @@
       {
         "from": "obs-studio/build_x64/rundir/Release",
         "to": "obs-studio"
+      },
+      {
+        "from": "ffmpeg/bin/ffmpeg.exe",
+        "to": "ffmpeg/bin/ffmpeg.exe"
+      },
+      {
+        "from": "ffmpeg/bin/ffprobe.exe",
+        "to": "ffmpeg/bin/ffprobe.exe"
       }
     ],
     "files": [
